Bug Fix Sign-up Join Button
signup.html join button was slightly off screen added a bigger right buffer to move it back on screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,6 +556,10 @@ input[type="radio"] {
                 left: 5%;
                 padding: 10px;
         }
+
+        .join-button {
+                right: 5px;
+        }
 }
 
 /* For small screens sizes from 800px wide and down */
